--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/>
+      <!-- Thumbnail image -->
+    <meta name="description" content="Creative Gallery App">
+    <meta name="title" property="og:title" content="Creative Gallery">
+    <meta property="og:type" content="Website">
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51190071284_0b86c1571c_b.jpg">
+    <meta name="description" property="og:description" content="Creative Gallery App">
+    <meta name="author" content="Christian Gerbig">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
