--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="Web site created using create-react-app"/>
-      <!-- Thumbnail image -->
-    <meta name="description" content="Creative Gallery App">
-    <meta name="title" property="og:title" content="Creative Gallery">
-    <meta property="og:type" content="Website">
-    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51275993293_b655d4b5fd_b.jpg">
-    <meta name="description" property="og:description" content="Creative Gallery App">
-    <meta name="author" content="Christian Gerbig">
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <!-- Thumbnail image -->
+    <meta name="description" content="Creative Gallery App" />
+    <meta name="title" property="og:title" content="Creative Gallery" />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://live.staticflickr.com/65535/51275993293_b655d4b5fd_b.jpg"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="Creative Gallery App"
+    />
+    <meta name="author" content="Christian Gerbig" />
     <title> Creative Gallery </title>
   </head>
   <body>
