--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://live.staticflickr.com/65535/51275993293_b655d4b5fd_b.jpg"
+      content="https://live.staticflickr.com/65535/51558760918_e96df50f82_b.jpg"
     />
     <meta
       name="description"
@@ -24,6 +24,13 @@
       content="Creative Gallery App"
     />
     <meta name="author" content="Christian Gerbig" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
     <title> Creative Gallery </title>
   </head>
   <body>
